Fri Jun 01 16:20:15 2001  George Lebl <jirka@5z.com>

	* panel-widget.c: when stoppong movement 1) ignore the press when
	  we are still in movement mode and wipe the "event" signal, and 2)
	  on release wipe the "event" signal yet again.  This way moving 
	  menu buttons from right click menu actually works.

Thu May 31 00:12:53 2001  George Lebl <jirka@5z.com>

	* gnome-panel-properties.c, session.c, config/panel.global:  Add the
	  window screenshot key to the default config and make the default
	  Shift-Print

Thu May 31 00:08:43 2001  George Lebl <jirka@5z.com>

	* global-keys.[ch], gnome-panel-properties.c: fix the usage of the
	  mod stuff, ignore bad mods in the crapplet, and properly check
	  state in the checking code.  Overall, evil shit, but it now
	  actually works.

Thu May 31 02:53:51 2001  Jonathan Blandford  <jrb@redhat.com>

	* gnome-panel-screenshot.c (take_window_shot): bug fix for when
	the cursor's over the root window.

Wed May 30 23:28:48 2001  George Lebl <jirka@5z.com>

	* session.c, gnome-panel-properties.c, panel_config_global.h,
	  global-keys.c:  Add a Control-Print binding for taking a screenshot
	  of a specific window.

Wed May 30 22:56:57 2001  George Lebl <jirka@5z.com>

	* gnome-panel-properties.c, gnome-panel-screenshot.(c|glade|glade.h),
	  Makefile.am, session.c, global-keys.c, panel_config_global.h:  Add
	  the screenshot key with default to the print screen key ("Print").
	  The screenshot program was written by Jonathan Blandford 
	  <jrb@redhat.com> and it rocks!  The printing stuff is now disabled
	  pending come more configure foo to detect and optionally link with
	  gnome-print.

Tue May 29 19:23:10 2001  George Lebl <jirka@5z.com>

	* gnome-run.c: load pixmaps correctly, when loading icon from dentry
	  look into the pixmap dir as well, check for NULLs at the right
	  places and use /panel/State rather then /panel/Config for the state
	  of the advanced toggle setting thingie
