@@ -1,3 +1,10 @@
+Mon Jun 04 20:25:54 2001  George Lebl <jirka@5z.com>
+
+	* gnome-panel-screenshot.c: select the filename and setup activate
+	  on the save entry so that it's easy and fast to control with the
+	  keyboard.  Also when busy make the window insensitive to give
+	  better feedback that things are happening.
+
 Fri Jun 01 16:20:15 2001  George Lebl <jirka@5z.com>
 
 	* panel-widget.c: when stoppong movement 1) ignore the press when
